# route-roulette

./: .gitignore  README.md  Yearslider.ipynb  pyproject.toml  route_roulette_analysis.ipynb  section_detail.html  section_map.html  section_map.ipynb  section_map_animated.html  section_map_animated_v1.html  section_map_animated_v2_pres.html  section_map_animated_v3_pres.html
