[project]
name = "route-roulette"
version = "0.1.0"
description = "Hack4Rail 2026 - Route Roulette: SBB Jura railway network budget allocation analysis"
authors = [
    {name = "Hack4Rail Team"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "pyarrow (>=24.0.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
